# gait-identification

./: .dockerignore  .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  evaluate.bat  evaluate.sh  mlflow_control.bat  mlflow_control.sh  pyproject.toml  run_pipeline.bat  run_pipeline.sh  setup.bat  setup.sh
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml
configs/inference/: mlflow_lstm.yaml
configs/preprocessing/: default.yaml  eval.yaml
configs/training/: lstm.yaml
data/rsvid/: eval.dvc  train.dvc
docker/: Dockerfile  README.md  docker-compose.yaml
gait_identification.egg-info/: PKG-INFO
ml_project.egg-info/: PKG-INFO
pose/: Makefile
pose/features/: __init__.py  extract_lengths.py
pose/mvp/: bag2mp4.py  centralizer.py  compare_features.py  data_download.py  extract_features.py  feature_bake.py  get3d.py  model_converter.py  overlay_keypoints.py  vizualization.py  yolo17.py
pose/mvp/features/: slices.py
pose/mvp/models/Catboost/: __main__.py  ctbst.py  evaluation.py
pose/mvp/models/LGBM/: LGBM.py  __main__.py  evaluation.py
pose/mvp/models/LSTM/: LSTM.py  __main__.py  eval.py  load.py
pose/mvp/models/MLP/: MLP.py  __main__.py  eval.py  eval_ig.py  load.py
pose/mvp/models/Xgboost/: __main__.py  evaluation.py  xgb.py
pose/mvp/paths/: __init__.py  good_features.json  names_best_result.json  paths.py
pose/test/: test_example.py
