[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gait-identification"
version = "0.1.0"
description = "ML project with minimal dependencies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "scikit-learn>=1.5.1",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "skl2onnx>=1.16.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
    "scipy>=1.14.0",
    "joblib>=1.4.2",
    "lightning>=2.1.0",
    "hydra-core>=1.3.0",
    "tensorboard>=2.15.0",
    "mlflow>=2.10.0",
    "dvc[all]>=3.40.0",
    "tritonclient[all]>=2.40.0",
    "gevent>=23.0.0",
    "requests>=2.25.0",
    "pathlib-abc>=0.1.1",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["pose*"]  # Включаем только ваш основной пакет pose
exclude = [
    "data*",
    "configs*",
    "results*",
    "outputs*",
    "logs*",
    "debug*",
    "models*",
    "tests*",
    ".*",
    "*.egg-info*",
    "__pycache__*",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Используйте dependency-groups (современный подход uv)
[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "ruff>=0.11.13",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=pose --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "W503"]

[tool.hydra]
version_base = "1.1"
